Draw_bounds_type does not display Polyhedron or Capsule types #28865

Closed
opened 2011-10-10 03:26:43 +02:00 by Ger Moran · 12 comments

%%%The bound options 'POLYHEDRON' and 'CAPSULE' fail to display the desired bound type. Setting draw_bounds_types for an object either through the UI outliner datablock or via Python: draw_bounds_type = 'CAPSULE'.

Reproduction:
In the outliner with the datablock info displayed, expand the the object data.
Enable Draw bounds.
Enumerating through draw_bounds_type will show the working bounds in the 3D view.

Tested in Blender 2.59, 2.6%%%

%%%The bound options 'POLYHEDRON' and 'CAPSULE' fail to display the desired bound type. Setting draw_bounds_types for an object either through the UI outliner datablock or via Python: draw_bounds_type = 'CAPSULE'. Reproduction: In the outliner with the datablock info displayed, expand the the object data. Enable Draw bounds. Enumerating through draw_bounds_type will show the working bounds in the 3D view. Tested in Blender 2.59, 2.6%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%The problem is that this variable is doubling with physics type - where capsule could be drawn, but polyhedron is just using the meshes geometry.

So even if capsule is added we'll have one empty drawtype left.%%%

%%%The problem is that this variable is doubling with physics type - where capsule could be drawn, but polyhedron is just using the meshes geometry. So even if capsule is added we'll have one empty drawtype left.%%%

%%%Campbell, checked code. Looks like physics is using it's own list of primitives. Or game engine is using object's boundbox type for something else? And not sure what "polyhedron is just using the meshes geometry" means. It uses the same mesh geometry?%%%

%%%Campbell, checked code. Looks like physics is using it's own list of primitives. Or game engine is using object's boundbox type for something else? And not sure what "polyhedron is just using the meshes geometry" means. It uses the same mesh geometry?%%%
Author

%%%In the case of Polyhedron should it not show the bounds? At the moment there is no visual indicator to say that the bound is working; just displays as if the object is selected. The other bound, 'Box', 'Sphere' etc, show the edges of the bounds as well as the base mesh. So if it is to keep with convention perhaps over-drawing the bound on the mesh.

As for the Capsule I suppose that it is at your discretion to either include it or not, hopefully removing it from the list to avoid complication seeing as BGE has its own list, but I think it would be good to have it functional.%%%

%%%In the case of Polyhedron should it not show the bounds? At the moment there is no visual indicator to say that the bound is working; just displays as if the object is selected. The other bound, 'Box', 'Sphere' etc, show the edges of the bounds as well as the base mesh. So if it is to keep with convention perhaps over-drawing the bound on the mesh. As for the Capsule I suppose that it is at your discretion to either include it or not, hopefully removing it from the list to avoid complication seeing as BGE has its own list, but I think it would be good to have it functional.%%%
Member

%%%Sorry to jump in on a slightly different, though related, issue: Blender 2.49b supported also a convex hull collision type (although it wasn't documented in the Python API). Assuming the physics engine still supports these, any chance of resurrecting this convex hull collision type?

It would be useful for the Blender nif import/export scripts: the nif format distinguishes between polyhedral and convex collision types. I guess it would also help physics simulation in large scenes, as convex hull collisions are much faster to determine than arbitrary polyhedral collisions.%%%

%%%Sorry to jump in on a slightly different, though related, issue: Blender 2.49b supported also a convex hull collision type (although it wasn't documented in the Python API). Assuming the physics engine still supports these, any chance of resurrecting this convex hull collision type? It would be useful for the Blender nif import/export scripts: the nif format distinguishes between polyhedral and convex collision types. I guess it would also help physics simulation in large scenes, as convex hull collisions are much faster to determine than arbitrary polyhedral collisions.%%%

%%%Amorilia: convex hull is still in the list when you select the game engine and look in the physics properties.
%%%

%%%Amorilia: convex hull is still in the list when you select the game engine and look in the physics properties. %%%
Member

%%%Gosh, you're right - thanks for the pointer. Obviously I'm still finding my way around in the new API, and didn't even know there was also GameObjectSettings.collision_bounds_type, besides Object.draw_bounds_type!

Apologies for the noise and for my ignorance.%%%

%%%Gosh, you're right - thanks for the pointer. Obviously I'm still finding my way around in the new API, and didn't even know there was also GameObjectSettings.collision_bounds_type, besides Object.draw_bounds_type! Apologies for the noise and for my ignorance.%%%

%%%What's the current status of this report? Is there still something which can be fixes without hurting other areas which are using boundboxes?%%%

%%%What's the current status of this report? Is there still something which can be fixes without hurting other areas which are using boundboxes?%%%
Author

%%%Sergey: Myself and Amorilia can work ahead without this affecting us for the time being if it does cause conflicts elsewhere.

The last thing of note just for completeness of the bug report. Setting viewport shading to bounding_box, object with capsule bound type will show the same problem.%%%

%%%Sergey: Myself and Amorilia can work ahead without this affecting us for the time being if it does cause conflicts elsewhere. The last thing of note just for completeness of the bug report. Setting viewport shading to bounding_box, object with capsule bound type will show the same problem.%%%

%%%Attaching patch which should make things more clear.%%%

%%%Attaching patch which should make things more clear.%%%

%%%Commited to rev41529. Thanks for the report, closing.%%%

%%%Commited to rev41529. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#28865
No description provided.