Fix #28865: Draw_bounds_type does not display Polyhedron or Capsule types

Separate DNA properties for bounding box used for bounding box display
in 3d viewport and bounding box used for collision detection in game engine.

Bumped subversion for proper updating old files to new system, but it
need more complex testing.