source/blender/editors/space_view3d/drawobject.c
@@ -107,7 +107,7 @@
 	((vd->drawtype==OB_TEXTURE && dt>OB_SOLID) || \
 	(vd->drawtype==OB_SOLID && vd->flag2 & V3D_SOLID_TEX))
 
-static void draw_bounding_volume(Scene *scene, Object *ob);
+static void draw_bounding_volume(Scene *scene, Object *ob, short type);
 
 static void drawcube_size(float size);
 static void drawcircle_size(float size);
@@ -2703,7 +2703,7 @@ static void draw_mesh_fancy(Scene *scene, ARegion *ar, View3D *v3d, RegionView3D
 
 	if(dt==OB_BOUNDBOX) {
 		if((v3d->flag2 & V3D_RENDER_OVERRIDE && v3d->drawtype >= OB_WIRE)==0)
-			draw_bounding_volume(scene, ob);
+			draw_bounding_volume(scene, ob, ob->boundtype);
 	}
 	else if(hasHaloMat || (totface==0 && totedge==0)) {
 		glPointSize(1.5);
@@ -5508,7 +5508,7 @@ static void draw_bb_quadric(BoundBox *bb, short type)
 	gluDeleteQuadric(qobj); 
 }
 
-static void draw_bounding_volume(Scene *scene, Object *ob)
+static void draw_bounding_volume(Scene *scene, Object *ob, short type)
 {
 	BoundBox *bb= NULL;
 	
@@ -5534,8 +5534,8 @@ static void draw_bounding_volume(Scene *scene, Object *ob)
 	
 	if(bb==NULL) return;
 	
-	if(ob->boundtype==OB_BOUND_BOX) draw_box(bb->vec);
-	else draw_bb_quadric(bb, ob->boundtype);
+	if(type==OB_BOUND_BOX) draw_box(bb->vec);
+	else draw_bb_quadric(bb, type);
 	
 }
 
@@ -6101,7 +6101,7 @@ void draw_object(Scene *scene, ARegion *ar, View3D *v3d, Base *base, int flag)
 			}
 			else if(dt==OB_BOUNDBOX) {
 				if((v3d->flag2 & V3D_RENDER_OVERRIDE && v3d->drawtype >= OB_WIRE)==0)
-					draw_bounding_volume(scene, ob);
+					draw_bounding_volume(scene, ob, ob->boundtype);
 			}
 			else if(ED_view3d_boundbox_clip(rv3d, ob->obmat, ob->bb ? ob->bb : cu->bb))
 				empty_object= drawDispList(scene, v3d, rv3d, base, dt);
@@ -6117,7 +6117,7 @@ void draw_object(Scene *scene, ARegion *ar, View3D *v3d, Base *base, int flag)
 			}
 			else if(dt==OB_BOUNDBOX) {
 				if((v3d->flag2 & V3D_RENDER_OVERRIDE && v3d->drawtype >= OB_WIRE)==0)
-					draw_bounding_volume(scene, ob);
+					draw_bounding_volume(scene, ob, ob->boundtype);
 			}
 			else if(ED_view3d_boundbox_clip(rv3d, ob->obmat, ob->bb ? ob->bb : cu->bb)) {
 				empty_object= drawDispList(scene, v3d, rv3d, base, dt);
@@ -6134,7 +6134,7 @@ void draw_object(Scene *scene, ARegion *ar, View3D *v3d, Base *base, int flag)
 				drawmball(scene, v3d, rv3d, base, dt);
 			else if(dt==OB_BOUNDBOX) {
 				if((v3d->flag2 & V3D_RENDER_OVERRIDE && v3d->drawtype >= OB_WIRE)==0)
-					draw_bounding_volume(scene, ob);
+					draw_bounding_volume(scene, ob, ob->boundtype);
 			}
 			else 
 				empty_object= drawmball(scene, v3d, rv3d, base, dt);
@@ -6376,6 +6376,14 @@ void draw_object(Scene *scene, ARegion *ar, View3D *v3d, Base *base, int flag)
 			}
 		}
 
+		if(ob->gameflag & OB_BOUNDS) {
+			if(ob->boundtype!=ob->collision_boundtype || (dtx & OB_BOUNDBOX)==0) {
+				setlinestyle(2);
+				draw_bounding_volume(scene, ob, ob->collision_boundtype);
+				setlinestyle(0);
+			}
+		}
+
 		/* draw extra: after normal draw because of makeDispList */
 		if(dtx && (G.f & G_RENDER_OGL)==0) {
 
@@ -6383,8 +6391,7 @@ void draw_object(Scene *scene, ARegion *ar, View3D *v3d, Base *base, int flag)
 				drawaxes(1.0f, OB_ARROWS);
 			}
 			if(dtx & OB_BOUNDBOX) {
-				if((v3d->flag2 & V3D_RENDER_OVERRIDE)==0)
-					draw_bounding_volume(scene, ob);
+				draw_bounding_volume(scene, ob, ob->boundtype);
 			}
 			if(dtx & OB_TEXSPACE) drawtexspace(ob);
 			if(dtx & OB_DRAWNAME) {
